# podcast-summary

./: .gitignore  LICENSE  PLAN_masterplan.md  README.md  config.yaml  dotenv.example  main.py  podcasts.yaml  pyproject.toml  pytest.ini  run_pipeline.py
deployment/: podcast-summary.service  podcast-summary.timer
examples/: example email how-i-ai 20260126.html  example email oddlots 20260126.html
src/: __init__.py  config_loader.py  contextualizer.py  database.py  downloader.py  emailer.py  rss_parser.py  summarizer.py  transcriber.py
src/llm/: gemini.py  openai.py
tests/: __init__.py  conftest.py  test_config_validation.py  test_download.py  test_email.py  test_end_to_end.py  test_error_handling.py  test_idempotency.py  test_summarize.py  test_transcribe.py
